<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>rotate_recovery</name>
    <version>1.16.6</version>
    <description>

        This package provides a recovery behavior for the navigation stack that attempts escape from the costmap lethal cost by navigating following the descending gradient.

    </description>
    <author>Enrico Piazza</author>
    <author>enrico.piazza@polimi.it</author>
    <maintainer email="enrico.piazza@polimi.it">Enrico Piazza</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/rotate_recovery</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>angles</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>cmake_modules</build_depend>

    <depend>costmap_2d</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>

    <export>
        <nav_core plugin="${prefix}/rotate_plugin.xml" />
    </export>

</package>
